@@ -1,2 +1,17 @@
 # MNXB01-project
-Repo for the final project of the MNXB01 course at Lund University. Autumn 2021
+Repo for the final project of the MNXB01 course at Lund University. Autumn 2021.
+
+Group H
+	Jesper Larsson
+	Antton Lamarca
+
+##Usage
+
+As of now, the way I've been running the functions is the following
+
+    root
+    tempTrender* test_2 = new tempTrender("../datasets/smhi-opendata_1_162870_20210926_101011_Lulea.csv")
+    test_2->tempOnDay(1,2)
+
+Make sure to include the local path to your include/ directory in the rootlogon.C file for it to work!
+
